// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cookies multiple Set-Cookie with one cookie each sets cookies on a long list of redirects, ending with different domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo7",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo6",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo5",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo4",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo3",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo2",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo1",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo0",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar7",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar6",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar5",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar4",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar3",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar2",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar1",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar0",
  },
]
`;

exports[`Cookies multiple Set-Cookie with one cookie each sets cookies on a long list of redirects, ending with original domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo8",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo8",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo7",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo6",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo5",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo4",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo3",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo2",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo1",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo0",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar8",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar8",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar7",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar6",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar5",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar4",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar3",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar2",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar1",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namebar0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valbar0",
  },
]
`;

exports[`Cookies single Set-Cookie with comma-separated multiple cookies sets cookies on a long list of redirects, ending with different domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo7, namebar7=valbar7",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo6, namebar6=valbar6",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo5, namebar5=valbar5",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo4, namebar4=valbar4",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo3, namebar3=valbar3",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo2, namebar2=valbar2",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo1, namebar1=valbar1",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo0, namebar0=valbar0",
  },
]
`;

exports[`Cookies single Set-Cookie with comma-separated multiple cookies sets cookies on a long list of redirects, ending with original domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo8",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo8, namebar8=valbar8",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo7, namebar7=valbar7",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo6, namebar6=valbar6",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo5, namebar5=valbar5",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo4, namebar4=valbar4",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo3, namebar3=valbar3",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo2, namebar2=valbar2",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo1, namebar1=valbar1",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 33,
    "value": "valfoo0, namebar0=valbar0",
  },
]
`;

exports[`Cookies single Set-Cookie with semicolon-separated multiple cookies sets cookies on a long list of redirects, ending with different domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo7",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo6",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo5",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo4",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo3",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo2",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo1",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo0",
  },
]
`;

exports[`Cookies single Set-Cookie with semicolon-separated multiple cookies sets cookies on a long list of redirects, ending with original domain 1`] = `
Array [
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo8",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo8",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo7",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo7",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo6",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo6",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo5",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo5",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo4",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo4",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo3",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo3",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo2",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo2",
  },
  Object {
    "domain": "site2.bar.net",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo1",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo1",
  },
  Object {
    "domain": "site1.foo.com",
    "expires": -1,
    "httpOnly": false,
    "name": "namefoo0",
    "path": "/",
    "secure": false,
    "session": true,
    "size": 15,
    "value": "valfoo0",
  },
]
`;
